objects/Invocation_Pattern_for_Command__c.object
<CustomObject>
    <fields>
        <fullName>Bot_Command__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bot Command</label>
        <referenceTo>Bot_Command__c</referenceTo>
        <relationshipLabel>Invocation Pattern for Commands</relationshipLabel>
        <relationshipName>Invocation_Pattern_for_Commands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invocation_Pattern__c</fullName>
        <label>Invocation Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Utterance__c</fullName>
        <label>Sample Utterance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invocation Pattern for Command</label>
    <nameField>
        <displayFormat>ip-{0000}</displayFormat>
        <label>Invocation Pattern for Command Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invocation Pattern for Commands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>